broked tests fixed